# token-monitoring

./: .env.example  .gitignore  README.md  pyproject.toml
deploy/: README.md  serve_with_restart.sh
src/token_monitoring/: __init__.py  api.py  auth_pam.py  cli.py  config.py  dashboard.py  db.py  proxy.py
tests/: conftest.py  test_auth_pam.py  test_db.py  test_proxy_nonstreaming.py  test_proxy_streaming.py
web/: index.html
