[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "token-monitoring"
version = "0.0.1"
description = "Argo LLM gateway proxy that records per-user token usage and exposes a dashboard (arecibo-hosted)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Proprietary" }
authors = [{ name = "APS Software" }]
dependencies = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.23",
    "httpx>=0.27",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    # PAM bindings for the /auth/login endpoint. Routes through the host's
    # PAM stack — on arecibo that's SSSD → Kerberos, i.e. the same chain
    # SSHd uses for password logins. No C build deps.
    "python-pam>=2.0",
    # python-pam 2.x imports `six` at module load but does not always
    # declare it in its own metadata (upstream packaging bug). Pin it
    # explicitly so a fresh venv doesn't 500 on the first login.
    "six>=1.16",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]

[project.scripts]
token-monitoring = "token_monitoring.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
token_monitoring = ["web/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]
